
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SC ;
 int fprintf (int ,char*,int) ;
 int memcpy (char*,int ,int) ;
 int stdout ;
 int strlen (int ) ;
 void stub1 () ;

int main(void)
{
    char payload[34];

    memcpy(payload, SC, 34);

    fprintf(stdout, "Length: %d\n", strlen(SC));
    (*(void(*)()) payload) ();

return 0;
}
