; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/arm/extr_43520.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/arm/extr_43520.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SC = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"Length: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [34 x i8], align 16
  store i32 0, i32* %1, align 4
  %3 = getelementptr inbounds [34 x i8], [34 x i8]* %2, i64 0, i64 0
  %4 = load i32, i32* @SC, align 4
  %5 = call i32 @memcpy(i8* %3, i32 %4, i32 34)
  %6 = load i32, i32* @stdout, align 4
  %7 = load i32, i32* @SC, align 4
  %8 = call i32 @strlen(i32 %7)
  %9 = call i32 @fprintf(i32 %6, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = getelementptr inbounds [34 x i8], [34 x i8]* %2, i64 0, i64 0
  %11 = bitcast i8* %10 to void (...)*
  call void (...) %11()
  ret i32 0
}

declare dso_local i32 @memcpy(i8*, i32, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i32) #1

declare dso_local i32 @strlen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
